CREATE SCHEMA IF NOT EXISTS app;
SET search_path TO app, public;

CREATE TYPE document_source_type AS ENUM ('TEXT');
CREATE TYPE analysis_status AS ENUM ('PENDING', 'PROCESSING', 'COMPLETED', 'FAILED');
CREATE TYPE analysis_adapter_type AS ENUM ('MOCK', 'MANUAL', 'LLM');
CREATE TYPE analysis_kind AS ENUM ('DOCUMENT', 'ANSWER', 'REVISION');
CREATE TYPE requirement_status AS ENUM (
    'EXTRACTED',
    'AMBIGUOUS',
    'CLARIFYING',
    'IN_REVIEW',
    'CONFIRMED'
);
CREATE TYPE ambiguity_status AS ENUM ('OPEN', 'RESOLVED');
CREATE TYPE ambiguity_type AS ENUM (
    'QUANTITY_MISSING',
    'PERFORMANCE_MISSING',
    'CONDITION_MISSING',
    'ACTOR_MISSING',
    'SUCCESS_CRITERIA_MISSING',
    'TERM_AMBIGUOUS',
    'EXCEPTION_MISSING'
);
CREATE TYPE revision_source AS ENUM ('AI', 'MANUAL');
CREATE TYPE revision_status AS ENUM ('PROPOSED', 'APPROVED', 'REJECTED');
CREATE TYPE clarification_source AS ENUM ('AI', 'MANUAL');
CREATE TYPE clarification_status AS ENUM ('WAITING', 'ANSWERED', 'RESOLVED');
CREATE TYPE acceptance_criteria_source AS ENUM ('MOCK', 'AI', 'MANUAL');

CREATE TABLE project (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(100) NOT NULL,
    description VARCHAR(2000),
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE document (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    project_id BIGINT NOT NULL REFERENCES project (id),
    title VARCHAR(200) NOT NULL,
    content TEXT NOT NULL,
    source_type document_source_type NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX idx_document_project_id ON document (project_id);

CREATE TABLE analysis (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    document_id BIGINT NOT NULL REFERENCES document (id),
    kind analysis_kind NOT NULL,
    requirement_id BIGINT,
    clarification_id BIGINT,
    status analysis_status NOT NULL DEFAULT 'PENDING',
    adapter_type analysis_adapter_type NOT NULL,
    schema_version VARCHAR(50) NOT NULL,
    input_content_version BIGINT,
    retry_of_analysis_id BIGINT REFERENCES analysis (id),
    input_snapshot JSONB NOT NULL,
    result JSONB,
    error_code VARCHAR(100),
    error_message TEXT,
    raw_response JSONB,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    started_at TIMESTAMPTZ,
    completed_at TIMESTAMPTZ,
    CONSTRAINT uq_analysis_id_document UNIQUE (id, document_id),
    CONSTRAINT ck_analysis_not_self_retry CHECK (
        retry_of_analysis_id IS NULL OR retry_of_analysis_id <> id
    ),
    CONSTRAINT ck_analysis_reference_by_kind CHECK (
        (kind = 'DOCUMENT' AND requirement_id IS NULL AND clarification_id IS NULL
            AND input_content_version IS NULL)
        OR (kind = 'ANSWER' AND requirement_id IS NOT NULL AND clarification_id IS NOT NULL
            AND input_content_version > 0)
        OR (kind = 'REVISION' AND requirement_id IS NOT NULL AND clarification_id IS NULL
            AND input_content_version > 0)
    ),
    CONSTRAINT ck_analysis_result_by_status CHECK (
        (status = 'PENDING' AND result IS NULL AND error_code IS NULL AND error_message IS NULL
            AND started_at IS NULL AND completed_at IS NULL)
        OR (status = 'PROCESSING' AND result IS NULL AND error_code IS NULL AND error_message IS NULL
            AND started_at IS NOT NULL AND completed_at IS NULL)
        OR (status = 'COMPLETED' AND result IS NOT NULL AND jsonb_typeof(result) = 'object'
            AND error_code IS NULL AND error_message IS NULL
            AND started_at IS NOT NULL AND completed_at IS NOT NULL)
        OR (status = 'FAILED' AND result IS NULL
            AND error_code IS NOT NULL AND error_message IS NOT NULL
            AND completed_at IS NOT NULL)
    )
);

CREATE INDEX idx_analysis_document_id ON analysis (document_id);
CREATE INDEX idx_analysis_status ON analysis (status);
CREATE UNIQUE INDEX uq_analysis_direct_retry
    ON analysis (retry_of_analysis_id)
    WHERE retry_of_analysis_id IS NOT NULL;
CREATE UNIQUE INDEX uq_analysis_active_document
    ON analysis (document_id)
    WHERE kind = 'DOCUMENT' AND status IN ('PENDING', 'PROCESSING');
CREATE UNIQUE INDEX uq_analysis_active_requirement
    ON analysis (requirement_id)
    WHERE requirement_id IS NOT NULL AND status IN ('PENDING', 'PROCESSING');

CREATE TABLE requirement (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    document_id BIGINT NOT NULL,
    analysis_id BIGINT NOT NULL,
    sequence_no INTEGER NOT NULL CHECK (sequence_no > 0),
    original_text TEXT NOT NULL,
    status requirement_status NOT NULL DEFAULT 'EXTRACTED',
    content_version BIGINT NOT NULL DEFAULT 1 CHECK (content_version > 0),
    approved_revision_id BIGINT,
    confirmed_text TEXT,
    confirmed_at TIMESTAMPTZ,
    lock_version BIGINT NOT NULL DEFAULT 0,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_requirement_analysis_document
        FOREIGN KEY (analysis_id, document_id) REFERENCES analysis (id, document_id),
    CONSTRAINT uq_requirement_id_document UNIQUE (id, document_id),
    CONSTRAINT uq_requirement_analysis_sequence UNIQUE (analysis_id, sequence_no),
    CONSTRAINT ck_requirement_confirmation CHECK (
        (status = 'CONFIRMED' AND approved_revision_id IS NOT NULL
            AND confirmed_text IS NOT NULL AND confirmed_at IS NOT NULL)
        OR (status <> 'CONFIRMED' AND approved_revision_id IS NULL
            AND confirmed_text IS NULL AND confirmed_at IS NULL)
    )
);

CREATE INDEX idx_requirement_document_id ON requirement (document_id);
CREATE INDEX idx_requirement_analysis_id ON requirement (analysis_id);

CREATE TABLE ambiguity_issue (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    requirement_id BIGINT NOT NULL REFERENCES requirement (id),
    type ambiguity_type NOT NULL,
    evidence TEXT NOT NULL,
    status ambiguity_status NOT NULL DEFAULT 'OPEN',
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    resolved_at TIMESTAMPTZ,
    CONSTRAINT uq_ambiguity_issue_id_requirement UNIQUE (id, requirement_id)
);

CREATE INDEX idx_ambiguity_issue_requirement_id ON ambiguity_issue (requirement_id);
CREATE INDEX idx_ambiguity_issue_status ON ambiguity_issue (status);

CREATE TABLE clarification (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    requirement_id BIGINT NOT NULL REFERENCES requirement (id),
    ambiguity_issue_id BIGINT NOT NULL,
    round_no INTEGER NOT NULL CHECK (round_no > 0),
    question_text TEXT NOT NULL,
    question_source clarification_source NOT NULL,
    answer_text TEXT,
    status clarification_status NOT NULL DEFAULT 'WAITING',
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    answered_at TIMESTAMPTZ,
    CONSTRAINT fk_clarification_issue_requirement
        FOREIGN KEY (ambiguity_issue_id, requirement_id)
        REFERENCES ambiguity_issue (id, requirement_id),
    CONSTRAINT uq_clarification_issue_round UNIQUE (ambiguity_issue_id, round_no),
    CONSTRAINT uq_clarification_id_requirement UNIQUE (id, requirement_id)
);

CREATE INDEX idx_clarification_requirement_id ON clarification (requirement_id);
CREATE INDEX idx_clarification_issue_id ON clarification (ambiguity_issue_id);

ALTER TABLE analysis
    ADD CONSTRAINT fk_analysis_requirement_document
        FOREIGN KEY (requirement_id, document_id)
        REFERENCES requirement (id, document_id),
    ADD CONSTRAINT fk_analysis_clarification_requirement
        FOREIGN KEY (clarification_id, requirement_id)
        REFERENCES clarification (id, requirement_id);

CREATE TABLE requirement_revision (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    requirement_id BIGINT NOT NULL REFERENCES requirement (id),
    input_content_version BIGINT NOT NULL CHECK (input_content_version > 0),
    revision_no INTEGER NOT NULL CHECK (revision_no > 0),
    proposed_text TEXT NOT NULL,
    source revision_source NOT NULL,
    status revision_status NOT NULL DEFAULT 'PROPOSED',
    rejection_reason TEXT,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    approved_at TIMESTAMPTZ,
    reviewed_at TIMESTAMPTZ,
    CONSTRAINT uq_revision_requirement_number UNIQUE (requirement_id, revision_no),
    CONSTRAINT uq_revision_id_requirement UNIQUE (id, requirement_id),
    CONSTRAINT ck_revision_review_fields CHECK (
        (status = 'PROPOSED' AND reviewed_at IS NULL
            AND approved_at IS NULL AND rejection_reason IS NULL)
        OR (status = 'APPROVED' AND reviewed_at IS NOT NULL
            AND approved_at IS NOT NULL AND rejection_reason IS NULL)
        OR (status = 'REJECTED' AND reviewed_at IS NOT NULL
            AND approved_at IS NULL AND rejection_reason IS NOT NULL
            AND btrim(rejection_reason) <> '')
    )
);

CREATE INDEX idx_revision_requirement_id ON requirement_revision (requirement_id);
CREATE UNIQUE INDEX uq_revision_single_proposed
    ON requirement_revision (requirement_id)
    WHERE status = 'PROPOSED';

ALTER TABLE requirement
    ADD CONSTRAINT fk_requirement_approved_revision
        FOREIGN KEY (approved_revision_id, id)
        REFERENCES requirement_revision (id, requirement_id);

CREATE TABLE revision_clarification (
    revision_id BIGINT NOT NULL,
    clarification_id BIGINT NOT NULL,
    requirement_id BIGINT NOT NULL REFERENCES requirement (id),
    PRIMARY KEY (revision_id, clarification_id),
    CONSTRAINT fk_revision_clarification_revision_requirement
        FOREIGN KEY (revision_id, requirement_id)
        REFERENCES requirement_revision (id, requirement_id),
    CONSTRAINT fk_revision_clarification_answer_requirement
        FOREIGN KEY (clarification_id, requirement_id)
        REFERENCES clarification (id, requirement_id)
);

CREATE INDEX idx_revision_clarification_clarification_id
    ON revision_clarification (clarification_id);

CREATE TABLE acceptance_criteria (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    revision_id BIGINT NOT NULL REFERENCES requirement_revision (id),
    sequence_no INTEGER NOT NULL CHECK (sequence_no > 0),
    given_text TEXT NOT NULL,
    when_text TEXT NOT NULL,
    then_text TEXT NOT NULL,
    source acceptance_criteria_source NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_acceptance_criteria_revision_sequence
        UNIQUE (revision_id, sequence_no)
);

CREATE INDEX idx_acceptance_criteria_revision_id ON acceptance_criteria (revision_id);

COMMENT ON TABLE project IS '프로젝트 최상위 단위';
COMMENT ON TABLE document IS '고객으로부터 받은 원본 요구사항 자료';
COMMENT ON TABLE analysis IS 'AI 또는 Mock AI 분석 실행 기록';
COMMENT ON TABLE requirement IS '문서에서 추출한 요구사항 단위';
